# xi-lib

./: .gitignore  .gitmodules  Cargo.toml  README.md  RFC.md  build.rs  cbindgen.toml
src/: lib.rs
tests/: Makefile  init.c
