[package]
name = "xi-lib"
version = "0.1.0"
authors = ["David Soria Parra <dsp@experimentalworks.net>"]

[lib]
name = "xilib"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
xi-core-lib = { path = "../xi-editor/rust/core-lib" }
xi-rpc = { path = "../xi-editor/rust/rpc" }

[build-dependencies]
cbindgen = "0.6.6"
